# wenxin-openai-proxy

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: chat.py  models.py
app/core/: config.py
app/schemas/: request.py  response.py
app/wenxin/: __init__.py  chat.py
config/: config.example.yaml
